--- a/components/footer.html
+++ b/components/footer.html
@@ -1,1 +1,7 @@
-head
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 mx-auto"><span class="copyright">Copyright&nbsp;© ProDict 2018</span></div>
+        </div>
+    </div>
+</footer>
